--- a/package.json
+++ b/package.json
@@ -1,50 +1,42 @@
 {
   "name": "site-chattr",
   "version": "1.0.0",
-  "description": "A browser plugin to add a chatroom to any web page powered by the nostr protocol",
-  "main": "index.html",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Czino/site-chattr.git"
-  },
-  "keywords": [
-    "nostr",
-    "chat",
-    "room",
-    "chat",
-    "NIP-22"
-  ],
-  "author": "Czino",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Czino/site-chattr/issues"
-  },
-  "homepage": "https://github.com/Czino/site-chattr#readme",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.108",
+    "@types/react": "^18.3.6",
+    "@types/react-dom": "^18.3.0",
     "jotai": "^2.9.3",
-    "next": "14.2.11",
     "nostr-hooks": "^2.9.11",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.11",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   }
 }
