--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "site-chattr",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
+    "@nostr-dev-kit/ndk": "^2.10.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,12 +16,17 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
+  },
+  "overrides": {
+    "@nostr-dev-kit/ndk": {
+      "tseep": "npm:eventemitter3@5.0.1"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve:build": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,7 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.271",
     "postcss": "^8.4.47",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.11"
   }
 }
