--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src"
