--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "react-scripts build",
         "serve:build": "serve -s build",
         "test": "react-scripts test",
+        "lint": "eslint",
         "eject": "react-scripts eject"
     },
     "dependencies": {
