--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
+        "@types/chrome": "^0.0.271",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.108",
         "@types/react": "^18.3.6",
         "@types/react-dom": "^18.3.0",
-        "@types/chrome": "^0.0.271",
         "postcss": "^8.4.47",
         "serve": "^14.2.3",
         "snapshot-diff": "^0.10.0",
