--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "events": "^3.3.0",
         "jotai": "^2.9.3",
         "nostr-hooks": "^2.9.11",
+        "nostr-login": "^1.6.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-scripts": "5.0.1",
@@ -55,6 +56,7 @@
     },
     "jest": {
         "resetMocks": false,
+        "clearMocks": true,
         "globalSetup": "<rootDir>/test/global-setup.ts",
         "transformIgnorePatterns": [
             "node_modules/((?!nostr-hooks)/)"
