--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,25 +3,19 @@
     "name": "SiteChattr",
     "description": "A browser plugin to add a chatroom to any web page powered by the nostr protocol",
     "version": "1.0",
-    "permissions": ["activeTab"],
     "action": {
-        "default_icon": "SiteChattr.png"
+        "default_icon": "SiteChattr.png",
+        "default_title": "Open SiteChattr"
+    },
+    "permissions": [
+        "sidePanel", "activeTab", "tabs"
+    ],
+    "side_panel": {
+        "default_path": "index.html"
     },
     "background": {
         "service_worker": "background.js"
     },
-    "content_scripts": [
-        {
-            "js": ["content.js"],
-            "matches": ["<all_urls>"]
-        }
-    ],
-    "web_accessible_resources": [
-        {
-            "resources": ["index.html", "static/js/*", "static/css/*"],
-            "matches": ["<all_urls>"]
-        }
-    ],
     "content_security_policy": {
         "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
     }
