--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,17 @@
     "description": "A browser plugin to add a chatroom to any web page powered by the nostr protocol",
     "version": "1.1",
     "action": {
-        "default_icon": "SiteChattr.png",
+        "default_icon": {
+            "16": "SiteChattr-16.png",
+            "48": "SiteChattr-48.png",
+            "128": "SiteChattr-128.png"
+        },
         "default_title": "Open SiteChattr"
+    },
+    "icons": {
+        "16": "SiteChattr-16.png",
+        "48": "SiteChattr-48.png",
+        "128": "SiteChattr-128.png"
     },
     "permissions": ["sidePanel", "activeTab", "tabs"],
     "side_panel": {
