--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "nostr-login": "^1.6.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5"
     },
