Make extension Firefox compatible

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,12 @@
     "manifest_version": 3,
     "name": "SiteChattr",
     "description": "A browser plugin to add a chatroom to any web page powered by the nostr protocol",
-    "version": "1.1",
+    "version": "1.2",
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "sitechattr@czino.de"
+        }
+    },
     "action": {
         "default_icon": {
             "16": "SiteChattr-16.png",
@@ -16,12 +21,22 @@
         "48": "SiteChattr-48.png",
         "128": "SiteChattr-128.png"
     },
-    "permissions": ["sidePanel", "activeTab", "tabs"],
+    "permissions": ["activeTab", "tabs", "sidePanel", "sidebarAction"],
     "side_panel": {
         "default_path": "index.html"
     },
+    "sidebar_action": {
+        "default_title": "SiteChattr",
+        "default_panel": "index.html",
+        "default_icon": "SiteChattr-128.png"
+    },
+    "browser_action": {
+        "default_icon": "SiteChattr-128.png",
+        "default_title": "Open SiteChattr"
+    },
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "scripts": ["background.js"]
     },
     "content_security_policy": {
         "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
