--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
         "@types/chrome": "^0.0.271",
+        "@types/firefox-webext-browser": "^120.0.4",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.108",
         "@types/react": "^18.3.6",
